# rwkv-agent-kit

./: .gitignore  404.html  ABOUT.md  Cargo.toml  LICENSE  README.md  README_EN.md  correct_config_example.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  robots.txt  sitemap.xml  ss.md  tsconfig.json
.github/workflows/: docs.yml  release.yml
.trae/documents/: documentation_architecture.md  documentation_restructure_prd.md
advanced/: index.html
api/: index.html
assets/: 404.html-2S0zuexn.js  404.html-B1Lo2pt0.js  SearchBox-B0nkSboj.js  SearchBox-DwSuBNeR.js  app-B4y-64Nf.js  app-Dv9jNuDG.js  index.html--h8-CD4r.js  index.html--tmRgCDj.js  index.html-2o2EPUn8.js  index.html-34eKvbZQ.js  index.html-4qvI1jkU.js  index.html-55zSRrRz.js  index.html-8BIOPkrU.js  index.html-B-YMF76T.js  index.html-BGygGYeW.js  index.html-BMijfYN0.js  index.html-BTwSvptB.js  index.html-BW9BIpiW.js  index.html-BZ6uMfOZ.js  index.html-BcIQXMDy.js  index.html-BcTqQlWd.js  index.html-Bd4jW2Y7.js  index.html-BeEsxyig.js  index.html-Bf0pd9Ff.js  index.html-BhZIZwU2.js  index.html-Bhg6cPKp.js  index.html-BjcxjNvU.js  index.html-BpDYbSm8.js  index.html-Bqjilmy4.js  index.html-BuXCsVk1.js  index.html-ByaDEacJ.js  index.html-Bz29-fEW.js  index.html-C-HuFhjD.js  index.html-C0b3kVCi.js  index.html-C0eZvagm.js  index.html-C0pV_7TV.js  index.html-C4xuibOi.js  index.html-C9tlxhml.js  index.html-CCnwrEwU.js  index.html-CGHZxgv0.js  (+62 more)
blog/: index.html
blog/tags/: index.html
config/: index.html
docs/: README.md
en/: index.html
examples/: chat_demo.rs  index.html
guide/: index.html
scripts/: distill_qwen3_to_model2vec.py  fix_pytorch_cuda.py  make_state.py  requirements_distillation.txt
src/: config.rs  database.rs  error.rs  examples.rs  learning.rs  lib.rs  memory.rs  retrieval.rs  rwkv_agent_kit.rs  utils.rs
(+120 files in other folders)
